[project]
name = "somfyprotect2mqtt"
version = "2025.1.3"
description = "Somfy Home Alarm Addon"
authors = [
    {name = "Minims",email = "github@minims.fr"}
]
packages = [{include = "somfyProtect2Mqtt"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aenum (==3.1.15)",
    "aiortc (==1.9.0)",
    "oauthlib (==3.2.2)",
    "paho-mqtt (==2.1.0)",
    "pillow (==11.1.0)",
    "python-ffmpeg-video-streaming (==0.1.16)",
    "pytz (==2024.2)",
    "pyyaml (==6.0.2)",
    "requests-oauthlib (==2.0.0)",
    "schedule (==1.2.2)",
    "simple-http-server (==0.22.3)",
    "urllib3 (==2.3.0)",
    "websocket-client (==1.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "24.10.0"
coverage = "7.6.10"
faker = "33.3.1"
pep8 = "1.7.1"
pipupgrade = "1.12.0"
pylint = "3.3.3"
pytest = "8.3.4"
unittest-xml-reporting = "3.2.0"
isort = "^5.13.2"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120


